--- a/src/Bandwagon.Web/_Imports.razor
+++ b/src/Bandwagon.Web/_Imports.razor
@@ -1,4 +1,9 @@
 ﻿@using System.Net.Http
+@using System.Text
+@using System.Diagnostics
+@using F23.StringSimilarity
+@using Newtonsoft.Json
+@using TwitchLib.Client.Models
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -7,4 +12,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Bandwagon.Web
+@using Bandwagon.Web.Models
+@using Bandwagon.Web.Services
 @using Bandwagon.Web.Shared
