--- a/src/Bandwagon.Web/Pages/Embeds/Video.razor
+++ b/src/Bandwagon.Web/Pages/Embeds/Video.razor
@@ -1,14 +1,6 @@
 ﻿
 @page "/embed/video"
 
-@using System.Diagnostics;
-@using Bandwagon.Web.Models;
-@using F23.StringSimilarity;
-@using Newtonsoft.Json;
-@using System.Text;
-@using TwitchLib.Client.Models;
-@using Bandwagon.Web.Services;
-
 @inject UserCircuitProvider SessionStore
 @inject GroupedMessageCollector MessageCollector
 
@@ -104,7 +96,7 @@
 
     DateTime? LastTick;
 
-    private MarkupString ReplaceEmotes(StoredChatMessage m)
+    private MarkupString ReplaceEmotes(IChatMessage m)
     {
         var s = m.Message;
         var p = 0;
@@ -117,98 +109,5 @@
         }
         b.Append(s[p..]);
         return (MarkupString)b.ToString();
-    }
-
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (!firstRender)
-        {
-            return;
-        }
-
-        //_userSession = SessionStore.Get("test");
-        //_userSession.SessionUpdated += s =>
-        //{
-        //    InvokeAsync(() => StateHasChanged());
-        //};
-
-        //_orgSession = OrgSessionStore.Get("test");
-        //_orgSession.Updated += s =>
-        //{
-        //    InvokeAsync(() => StateHasChanged());
-        //};
-
-        //await VideoPlayer.CreateTestVideoPlayerAsync("vod");
-
-        //@*var json = await File.ReadAllTextAsync(@"C:\Projects\the-hive-mind\data\chat5.json");*@
-        //var json = await File.ReadAllTextAsync(@"C:\Temp\chat5.json");
-        //messages = JsonConvert.DeserializeObject<List<StoredChatMessage>>(json) ?? throw new NullReferenceException();
-        //@*startTime = messages.Where(m => m is not null).MinBy(m => m.TmiSentTs)!.TmiSentTs;*@
-        //// "Message": "just like a DND party pcrowGiggle",
-        //// "TmiSentTs": "1676325886126",
-        //// VOD: 01:02:10
-        //@* chat1 timestamp = 1675383350799;*@
-        ////timestamp = startTime;
-        //startTime = 1676325886126L - (long)TimeSpan.Parse("01:02:10.500").TotalMilliseconds;
-        //timestamp = startTime;
-
-        //endTime = messages.Where(m => m is not null).MaxBy(m => m.TmiSentTs)!.TmiSentTs;
-        //await Update();
-    }
-
-    //async Task Sync()
-    //{
-    //    var elapsedSecs = await VideoPlayer.GetCurrentTimeAsync();
-    //    timestamp = startTime + (long)(elapsedSecs * 1000.0) + 8000;
-    //    MessageCollector.Reset();
-    //    didSync = true;
-    //}
-
-    async Task Update()
-    {
-        while (true)
-        {
-            foreach (var message in messages)
-            {
-                var tooOldTimestamp = timestamp - (30 * 1000);
-                if (message.TmiSentTs < tooOldTimestamp)
-                {
-                    continue;
-                }
-
-                while (message.TmiSentTs > timestamp)
-                {
-                    if (didSync)
-                    {
-                        break;
-                    }
-                    await Task.Delay(100);
-                    await UpdateTimestamp();
-                    StateHasChanged();
-                }
-                if (didSync)
-                {
-                    didSync = false;
-                    break;
-                }
-                MessageCollector.ReceiveMessage(message);
-                StateHasChanged();
-
-                await UpdateTimestamp();
-            }
-        }
-    }
-
-    async Task UpdateTimestamp()
-    {
-        var now = DateTime.Now;
-
-        LastTick ??= now;
-        timestamp += (long)(now - LastTick.Value).TotalMilliseconds;
-
-        LastTick = now;
-        //await Sync();
-
-        await Task.Yield();
     }
 }
