--- a/src/Bandwagon.Web/Pages/Index.razor
+++ b/src/Bandwagon.Web/Pages/Index.razor
@@ -1,11 +1,10 @@
 ﻿
 @page "/"
 
-Loaded
-
 @* 
     This is a test page that shows the different Embed zones for quick testing
 *@
-@*<iframe src="/embed/video" width="960" height="540"></iframe>
-<iframe src="/embed/chat-box" width="960" height="540"></iframe>
-*@
+
+<iframe src="/embed/video" width="960" height="540"></iframe>
+<iframe src="/embed/above-fold" width="960" height="540"></iframe>
+
