--- a/src/Bandwagon.Web/_Imports.razor
+++ b/src/Bandwagon.Web/_Imports.razor
@@ -13,5 +13,7 @@
 @using Microsoft.JSInterop
 @using Bandwagon.Web
 @using Bandwagon.Web.Models
+@using Bandwagon.Web.Models.TruffleSDK
 @using Bandwagon.Web.Services
 @using Bandwagon.Web.Shared
+@using Bandwagon.Web.Services.TruffleSDK
