--- a/src/Bandwagon.Web/Pages/Index.razor
+++ b/src/Bandwagon.Web/Pages/Index.razor
@@ -5,6 +5,6 @@
     This is a test page that shows the different Embed zones for quick testing
 *@
 
-<iframe src="/embed/video" width="960" height="540"></iframe>
-<iframe src="/embed/above-fold" width="960" height="540"></iframe>
+<iframe src="/embed/video" width="960" height="540" frameborder="0" scrolling="no"></iframe>
+<iframe src="/embed/above-fold" width="960" height="540" frameborder="0" scrolling="no"></iframe>
 
