--- a/src/Bandwagon.Web/wwwroot/css/site.css
+++ b/src/Bandwagon.Web/wwwroot/css/site.css
@@ -125,8 +125,6 @@ a, .btn-link {
     position: relative;
     overflow: hidden;
     pointer-events: none;
-    height: 100vh;
-    width: 100%;
 }
 
 .group {
@@ -238,8 +236,20 @@ a, .btn-link {
     color: #fff;
 }
 */
+
+#chat-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+#chat-container > * {
+    flex: 1;
+}
+
 .chat-box {
     position: relative;
+    align-items: stretch;
     flex: 1;
 }
 
@@ -262,6 +272,8 @@ a, .btn-link {
     flex-direction: row;
     align-items: stretch;
     height: 100%;
+    background-color: #0f0f0f;
+    color: #e4e4e4;
 }
 
 #embed-above-the-fold > * {
