--- a/src/Bandwagon.Web/Shared/ChatGroups.razor
+++ b/src/Bandwagon.Web/Shared/ChatGroups.razor
@@ -23,12 +23,12 @@
             continue;
         }
 
-        <div @key="group.Id" class="group slot-@slotIndex" style="opacity: @opacity;">
+        <div @key=group class="group slot-@slotIndex" style="opacity: @opacity;">
             <div class="group-inner">
-                @foreach (var scoredMessage in group.Messages.TakeLast(3))
+                @foreach (var collectedMessage in group.Messages.TakeLast(10))
                 {
-                    var message = scoredMessage.Message;
-                    <div class="grouped-message" style="opacity: @opacity;">
+                    var message = collectedMessage.Message;
+                    <div @key="collectedMessage" class="grouped-message slide-in-bottom" style="opacity: @opacity;">
                         <span class="grouped-message--name">@message.DisplayName:</span>
                         <span class="grouped-message--text">@ReplaceEmotes(message)</span>
                     </div>
