basic dance css

--- a/src/Bandwagon.Web/Pages/Embeds/AboveTheFold.razor
+++ b/src/Bandwagon.Web/Pages/Embeds/AboveTheFold.razor
@@ -8,7 +8,7 @@
 }
 
 <div id="embed-above-the-fold">
-    <div id="chat-container">
+    <div class="chat-container">
         <ChatGroups />
         <ChatBox />
     </div>
