--- a/src/Bandwagon.Web/Shared/ChatGroups.razor
+++ b/src/Bandwagon.Web/Shared/ChatGroups.razor
@@ -10,7 +10,7 @@
         visibilityStyle = "display: none;";
 }
 
-<div class="groups" style="@visibilityStyle">
+<div class="groups dancing" style="@visibilityStyle">
     @{
         var slotIndex = 1;
     }
