--- a/src/Bandwagon.Web/Pages/_Host.cshtml
+++ b/src/Bandwagon.Web/Pages/_Host.cshtml
@@ -9,6 +9,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
+    <link href="icons/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="Bandwagon.Web.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
