--- a/src/Bandwagon.Web/Shared/ChatControls.razor
+++ b/src/Bandwagon.Web/Shared/ChatControls.razor
@@ -13,7 +13,7 @@
     </label>
 </div>
 
-<button @onclick="Clean">Clean Chat</button>
+<button @onclick="ToggleDance">Dance Party</button>
 
 @if(_liveChatCircuit is not null)
 {
@@ -21,15 +21,12 @@
         <summary>Advanced</summary>
             <div>
                 <label>
-                    Group Matching Normalized Geometric Distance Threshold<br>
+                    Group Matching Geometric Distance Threshold<br>
                     <input type="number" step="0.05" @bind="_liveChatCircuit.Messages.MessageDistanceThreshold" min="0.1" max="1" /> 
                 </label>
             </div>
     </details>
 }
-
-<button class="dance-btn" @onclick="ToggleDance">Dance Party</button>
-
 
 @code {
     OrgCircuit? _orgCircuit;
@@ -48,15 +45,8 @@
         StateHasChanged();
     }
 
-    private void Clean()
-    {
-        _liveChatCircuit?.Messages.Reset();
-    }
-
     private void ToggleDance()
     {
-        if (_orgCircuit is null)
-            return;
-        _orgCircuit.IsDanceParty = !_orgCircuit.IsDanceParty;
+        
     }
 }
